--- a/sass/main.css
+++ b/sass/main.css
@@ -11,7 +11,6 @@
     transform: translate(0);
   }
 }
-
 @keyframes moveInRight {
   0% {
     opacity: 0;
@@ -25,7 +24,6 @@
     transform: translate(0);
   }
 }
-
 @keyframes moveInBottom {
   0% {
     opacity: 0;
@@ -36,7 +34,6 @@
     transform: translate(0);
   }
 }
-
 *,
 *::after,
 *::before {
@@ -129,8 +126,7 @@ body {
   margin-bottom: 4rem;
 }
 
-.btn:link,
-.btn:visited {
+.btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
   padding: 1.5rem 4rem;
@@ -140,7 +136,6 @@ body {
   position: relative;
   font-size: 1.6rem;
 }
-
 .btn:hover {
   transform: translateY(-0.3rem);
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
@@ -149,11 +144,9 @@ body {
   transform: scaleX(1.4) scaleY(1.6);
   opacity: 0;
 }
-
 .btn:active {
   transform: translateY(-0.1rem);
 }
-
 .btn--white {
   background-color: #fff;
   color: #777;
@@ -161,7 +154,6 @@ body {
 .btn--white::after {
   background-color: #fff;
 }
-
 .btn::after {
   content: "";
   display: inline-block;
@@ -174,14 +166,12 @@ body {
   z-index: -1;
   transition: all 0.4s;
 }
-
 .btn--animated {
   animation: moveInBottom 0.5s ease-out 0.75s;
   animation-fill-mode: backwards;
 }
 
-.btn-text:link,
-.btn-text:visited {
+.btn-text:link, .btn-text:visited {
   font-size: 1.6rem;
   color: #55c57a;
   display: inline-block;
@@ -190,14 +180,12 @@ body {
   padding: 3px;
   transition: all 0.2s;
 }
-
 .btn-text:hover {
   background-color: #55c57a;
   color: #fff;
   box-shadow: 0 1rem 2rem black;
   transform: translateY(-2px);
 }
-
 .btn-text:active {
   box-shadow: 0 0.5rem 1rem black;
   transform: translateY(0);
@@ -270,10 +258,10 @@ body {
   display: table;
   clear: both;
 }
-.row [class^="col-"] {
+.row [class^=col-] {
   float: left;
 }
-.row [class^="col-"]:not(:last-child) {
+.row [class^=col-]:not(:last-child) {
   margin-right: 6rem;
 }
 .row .col-1-of-2 {
@@ -283,30 +271,26 @@ body {
   width: calc((100% - 2 * 6rem) / 3);
 }
 .row .col-2-of-3 {
-  width: calc(2 * ((100% - 2 * 6rem) / 3) + 6rem);
+  width: calc(2 * (100% - 2 * 6rem) / 3 + 6rem);
 }
 .row .col-1-of-4 {
   width: calc((100% - 3 * 6rem) / 4);
 }
 .row .col-2-of-4 {
-  width: calc(2 * ((100% - 3 * 6rem) / 4) + 6rem);
+  width: calc(2 * (100% - 3 * 6rem) / 4 + 6rem);
 }
 .row .col-3-of-4 {
-  width: calc(3 * ((100% - 3 * 6rem) / 4) + 2 * 6rem);
+  width: calc(3 * (100% - 3 * 6rem) / 4 + 2 * 6rem);
 }
 
 .header {
-  background-image: linear-gradient(
-      to right bottom,
-      rgba(126, 213, 111, 0.8),
-      rgba(40, 180, 133, 0.8)
-    ),
-    url(../images/hero.jpg);
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../images/hero.jpg);
   background-size: cover;
   background-position: center;
   position: relative;
   height: 95vh;
-  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+          clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 }
 .header__logo-box {
   position: absolute;
@@ -332,20 +316,17 @@ body {
 
 .section-features {
   padding: 20rem 0;
-  background-image: linear-gradient(
-      to right bottom,
-      rgba(126, 213, 111, 0.8),
-      rgba(40, 180, 133, 0.8)
-    ),
-    url(../images/nat-4.jpg);
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../images/nat-4.jpg);
   background-size: cover;
   margin-top: -10rem;
   transform: skewY(-7deg);
-  
+}
+.section-features > * {
+  transform: scaleY(7deg);
 }
 
 .section-tours {
   margin-top: -10rem;
   background-color: #f7f7f7;
   padding: 25rem 0 50rem 0;
-}
+}/*# sourceMappingURL=main.css.map */
