--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -4,12 +4,26 @@
   margin-top: -20vh;
 }
 .section-features {
-  padding: 20rem;
+  padding: 20rem 0;
   background-image: linear-gradient(
       to right bottom,
       rgba(126, 213, 111, 0.8),
       rgba(40, 180, 133, 0.8)
     ),
-    url(../images/hero.jpg);
+    url(../images/nat-4.jpg);
   background-size: cover;
+  margin-top: -10rem;
+
+  transform: skewY(-7deg);
+
+  // Direct child selector
+  & > * {
+    transform: scaleY(7deg);
+  }
+}
+
+.section-tours {
+  margin-top: -10rem;
+  background-color: $color-grey-light-1;
+  padding: 25rem 0 50rem 0;
 }
