--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -6,9 +6,33 @@
   box-sizing: inherit;
 }
 html {
-  //this will justify what 1rem is 
-  font-size: 62.5%;
+  //this will justify what 1rem is
+  font-size: 62.5%;  //  1rem= 10px ; 10px/16px=62.5%
+
+ 
+  @include respond(tab-land) {  //1rem =9px , 9/16=56.25%
+    font-size: 56.25%;
+  }
+  
+  @include respond(phone) {  //1rem =4.8px , 4.8/16=30%
+    font-size: 30%;
+  }
+  @include respond(big-desktop) {  //1rem =12 , 12/16 =75%
+    font-size: 75%;
+  }
 }
-body{
-    box-sizing: border-box;
+body {
+  box-sizing: border-box;
+  padding: 3rem;
+  @include respond(tab-port) {  //1rem =8px , 8/16=50%
+    padding: 0;
+  }
+
 }
+
+::selection{
+  background-color: $color-primary;
+  color: $color-white;
+}
+
+//Responsive desgin
