--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -3,7 +3,6 @@ body {
     font-weight: 400;
     line-height: 1.7;
     font-size: 10px;
-    padding: 3rem;
     color: $color-gray-dark;
   }
 .heading-primary {
@@ -11,6 +10,10 @@ body {
   text-transform: uppercase;
   backface-visibility: hidden;
   margin-bottom: 6rem;
+  @include respond(phone){
+    letter-spacing: 1rem;
+    font-size: 5rem;
+  }
 
   &--main {
     display: block;
@@ -25,6 +28,10 @@ body {
     font-size: 2rem;
     letter-spacing: 1.7rem;
     animation: moveInRight 1s ease-out;
+
+    @include respond(phone){
+      letter-spacing: .5rem;
+    }
   }
 }
 .heading-secondary{
@@ -37,6 +44,13 @@ body {
   color: transparent;
   letter-spacing: 2px;
   transition: all .2s;
+
+  @include respond(tab-port){
+    font-size: 3rem;
+  }
+  @include respond(phone){
+    font-size: 2.5rem;
+  }
   &:hover{
     transform: skewY(2deg) skewX(15deg) scale(1.1);
     text-shadow: .5rem 1rem ;
