--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -6,6 +6,12 @@
   border-radius: 0.3rem;
   box-shadow: 0 1.5rem 4 rem rgba($color-black, 0.15);
   transition: transform .3s;
+
+  @include respond(tab-port){
+    padding: 2rem;
+  }
+
+  
   
   &__icon {
     font-size: 6rem;
@@ -18,6 +24,10 @@
     display: inline-block;
     -webkit-background-clip: text;
     color: transparent;
+
+    @include respond(tab-port){
+      margin-bottom: 0;
+    }
   }
   &:hover{
     transform: translateY(-1.5rem) scale(1.03);
