--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -10,6 +10,12 @@
   opacity: 0;
   visibility: hidden;
   transition: all .3s;
+  @supports(-webkit-backdrop-filter: blur(10px)) or (backdrop-filter: blur(10px)){
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    background-color: rgba($color-black, 0.8);
+  }
+
 
   
 
@@ -21,8 +27,8 @@
     display: table;
     overflow: hidden;
     opacity: 0;
-    transform: translate(-50%,-50%) scale(.5);
-    transition: all .4s .2s;
+    transform: translate(-50%,-50%) scale(.25);
+    transition: all .5s .2s;
 
   }
 
