--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -2,12 +2,22 @@
   width: 75%;
   margin: 0 auto;
   box-shadow: 0 3rem 6rem rgba($color-black, 0.1);
-  background-color: rgba($color-white, .6);
+  background-color: rgba($color-white, 0.6);
   border-radius: 3px;
   font-size: $default-font-size;
   padding: 6rem;
   padding-left: 9rem;
   transform: skewX(-12deg);
+
+  @include respond(tab-port) {
+    width: 100%;
+    padding: 4rem;
+    padding-left: 7rem;
+  }
+
+  @include respond(phone) {
+    transform: skewX(0);
+  }
   & > * {
     transform: skewX(12deg);
   }
@@ -16,12 +26,23 @@
     height: 15rem;
     float: left;
     position: relative;
-    -webkit-shape-outside: circle(50% at 50% 50%);
-    shape-outside: circle(50% at 50% 50%);
 
-    -webkit-clip-path: circle(50% at 50% 50%);
-    clip-path: circle(50% at 50% 50%);
+    overflow: hidden;
+    border-radius: 50%;
+
     transform: translateX(-3rem) skewX(12deg);
+
+    @supports (clip-path: polygon(0 0)) or (-wedkit-clip-path: polygon(0 0)) {
+      -webkit-clip-path: circle(50% at 50% 50%);
+      clip-path: circle(50% at 50% 50%);
+      -webkit-shape-outside: circle(50% at 50% 50%);
+      shape-outside: circle(50% at 50% 50%);
+      border-radius: none;
+    }
+
+    @include respond(phone) {
+      transform: translateX(-3rem) skewX(0);
+    }
   }
   &__img {
     height: 100%;
@@ -31,6 +52,9 @@
   }
   &__text {
     transform: skewX(12deg);
+    @include respond(phone) {
+      transform: skewX(0);
+    }
   }
   &__caption {
     position: absolute;
