--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,13 +4,42 @@
       rgba(126, 213, 111, 0.8),
       rgba(40, 180, 133, 0.8)
     ),
-    url(../images/hero.jpg);
+    url(../images/hero-small.jpg);
   background-size: cover;
-  background-position: center;
+  background-position: top;
   position: relative;
-  height: 95vh;
-  -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+  height: 85vh;
+
+  @supports (clip-path: polygon(0 0)) or (-wedkit-clip-path: polygon(0 0)) {
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+    height: 95vh;
+  }
+
+  @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
+    only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
+    only screen and (min-width: 125em) {
+    background-image: linear-gradient(
+        to right bottom,
+        rgba($color-primary-light, 0.8),
+        rgba($color-primary-dark, 0.8)
+      ),
+      url(../images/hero.jpg);
+  }
+
+  // @media (min-width: 2000px) {
+  //   background-image: linear-gradient(
+  //       to right bottom,
+  //       rgba($color-secondary-light, 0.8),
+  //       rgba($color-secondary-dark, 0.8)
+  //     ),
+  //     url(../images/hero.jpg);
+  // }
+
+  @include respond(phone) {
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+  }
 
   &__logo-box {
     position: absolute;
@@ -29,4 +58,3 @@
     text-align: center;
   }
 }
-
